--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,7 +2,7 @@ allow-help-menu: true
 allow-alias-menu: false
 messages:
   prefix: '&8[&5NoStrip&8]'
-  unknown-command: '&cUnknown Command. Use /{command} (aliases|toggle)'
+  unknown-command: '&cUnknown Command'
   must-be-player: '&cYou Must Be A Player To Use This Command!'
   no-permission: '&cYou Do Not Have Permission To Use This Command!'
   toggle-message: '&2Log Stripping Toggled {status}'
