--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,6 +4,7 @@ messages:
   prefix: '&8[&5NoStrip&8]'
   unknown-command: '&cUnknown Command'
   must-be-player: '&cYou Must Be A Player To Use This Command!'
-  no-permission: '&cYou Do Not Have Permission To Use This Command!'
+  no-permission: '&cPermission Required! Contact server admin!'
+  no-axe-permission: '&cAxe Is Denied! Permission(s) Required!'
   toggle-message: '&2Log Stripping Toggled {status}'
   config-reloaded: '&2Config Reloaded!'
