Adjust Axe Perm Message

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,6 +5,6 @@ messages:
   unknown-command: '&cUnknown Command'
   must-be-player: '&cYou Must Be A Player To Use This Command!'
   no-permission: '&cPermission Required! Contact server admin!'
-  no-axe-permission: '&cAxe Is Denied! Permission(s) Required!'
+  no-axe-permission: '&cAxe Is Denied! Permission Required!'
   toggle-message: '&2Log Stripping Toggled {status}'
   config-reloaded: '&2Config Reloaded!'
