Revert "Change default toggle message slightly"
This reverts commit d862f8c0d80fd4d8ae53de432cfdb0acabbcd719.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,5 +6,5 @@ messages:
   must-be-player: '&cYou Must Be A Player To Use This Command!'
   no-permission: '&cPermission Required! Contact server admin!'
   no-axe-permission: '&cAxe Is Denied! Permission Required!'
-  toggle-message: '&2Log Stripping {astatus}'
+  toggle-message: '&2Log Stripping Toggled {status}'
   config-reloaded: '&2Config Reloaded!'
