Add explanations and examples to config for help menu/commands and for toggle message placeholders

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,14 @@
+# -----------------[NoStrip]-------------------
+# --------------[Toggle Message]---------------
+# Available Toggle message placeholders for toggle status
+# {status} = on | off
+# {aststus} = enabled | disabled
+# ---------------------------------------------
+# -------------[Help/command Menu]------------------------------------------------------------------
+# Whether or not players can see the NoStrip menu/commands in chat with the /nostrip command
+# allow-help-menu: true/false
+# --------------------------------------------------------------------------------------------------
+
 allow-help-menu: true
 
 messages:
