Change default toggle message

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -17,5 +17,5 @@ messages:
   must-be-player: '&cYou Must Be A Player To Use This Command!'
   no-permission: '&cPermission Required! Contact server admin!'
   no-axe-permission: '&cAxe Is Denied! Permission Required!'
-  toggle-message: '&2Log Stripping Toggled {status}'
+  toggle-message: '&2Log Stripping {status}'
   config-reloaded: '&2Config Reloaded!'
