--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,21 +1,30 @@
 # -----------------[NoStrip]-------------------
-# --------------[Toggle Message]---------------
+# -------------[Toggle Message]----------------
 # Available Toggle message placeholders for toggle status
 # {status} = on | off
 # {astatus} = enabled | disabled
+# {permission} = Permission that is required (ONLY APPLIES TO THE "no-permission" MESSAGE SO FAR)
 # ---------------------------------------------
 # -------------[Help/command Menu]------------------------------------------------------------------
 # Whether or not players can see the NoStrip menu/commands in chat with the /nostrip command
 # allow-help-menu: true/false
 # --------------------------------------------------------------------------------------------------
+# -------------[Toggle Default]---------------------------------------------------------------------
+# Whether players will have stripping toggled on when joining.
+# toggle-default-on: true/false
+# If set to false and they don't have the 'nostrip.toggle' permission
+# they will be notified by the 'toggle-message' and 'no-permission' messages
+# Axe permissions are still required
+# ----------------------------------------------------------------------------------------------------
 
 allow-help-menu: true
+toggle-default-on: false
 
 messages:
   prefix: '&8&l[&c&l⦸ &4&lNo&c&lStrip &c&l⦸&8&l]'
   unknown-command: '&cUnknown Command'
   must-be-player: '&cYou Must Be A Player To Use This Command!'
-  no-permission: '&cPermission Required! Contact server admin!'
+  no-permission: '&cPermission {permission} Required! Contact server admin!'
   no-axe-permission: '&cAxe Is Denied! Permission Required!'
   toggle-message: '&2Log Stripping {status}'
   config-reloaded: '&2Config Reloaded!'
