--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -24,7 +24,8 @@ messages:
   prefix: '&8&l[&c&l⦸ &4&lNo&c&lStrip &c&l⦸&8&l]'
   unknown-command: '&cUnknown Command'
   must-be-player: '&cYou Must Be A Player To Use This Command!'
-  no-permission: '&cPermission {permission} Required! Contact server admin!'
+  no-permission: '&cYou do not have permission to use that command'
+  no-toggle-permission: '&cPermission {permission} Required! Contact server admin!'
   no-axe-permission: '&cAxe Is Denied! Permission Required!'
   toggle-message: '&2Log Stripping {status}'
   config-reloaded: '&2Config Reloaded!'
